<resources>
    <string name="app_name">VitalsensApp</string>
    <string name="app_title">Vitalsens</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_sensor_list">Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="select_sensors">Select sensors</string>
    <string name="scanning">Scanning for</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">Cancel</string>
    <string name="connect">Connect</string>
    <string name="paired">paired</string>
    <string name="disconnect">Disconnect</string>
    <string name="record">Record</string>
    <string name="history">History</string>
    <string name="connected_sensors">Sensors Events Log</string>
    <string name="send">Send</string>
    <string name="popup_title">Quit VitalsensMobile?</string>
    <string name="quit_message">Do you want to quit this Application?</string>
    <string name="disconnect_message">Still connected, disconnect before quitting</string>
    <string name="popup_yes">YES</string>
    <string name="popup_ok">OK</string>
    <string name="popup_no">NO</string>
    <string name="ecg1">ECG1</string>
    <string name="ecg3">ECG3</string>
    <string name="ppg1">PPG1</string>
    <string name="ppg2">PPG2</string>
    <string name="accel">ACCEL</string>
    <string name="imped">IMPED</string>
    <string name="vitalsens_record_list">VITALSENS RECORDS</string>
    <string name="action_delete">Delete</string>
    <string name="action_send_to_cloud">Send To Cloud</string>
    <string name="action_send_to_email">Send To Email</string>
    <string name="logo_desc">vitalsens logo</string>
    <string name="scan_sensor_title">Sensors Scanner</string>
    <string name="devices">Devices</string>
    <string name="empty">""</string>
    <string name="sensor_id">SENSOR ID</string>
    <string name="patient_id">PATIENT ID</string>
    <string name="title_activity_connect_dialog">ConnectDialog</string>
    <string name="stop">Stop</string>
    <string name="hr">HR</string>
    <string name="temp">Temp.</string>
    <string name="hr_NA">Heart Rate: N/A</string>
    <string name="starting_auto_connect">Auto-connect &#8230;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="disconnecting">Disconnecting &#8230;</string>
    <string name="pain">Pain On/Off</string>
    <string name="cloud_access_service_desc">
        A vitalsens application background service that performs cloud access
        transactions.
    </string>
    <string name="save_record_service_desc">
        A vitalsens application background service that saves recorded data to the
        local storage.
    </string>
    <string name="pId">Patient Id</string>
    <string name="dType">Data Type</string>
    <string name="rTime">Time</string>
    <string name="duration">Duration</string>
    <string name="hRate">Heart-Rate</string>
    <string name="pvcCount">PVC Count</string>
    <string name="minRPeak">Min R-Peak</string>
    <string name="maxRPeak">Max R-Peak</string>
    <string name="analysis_result">Analysis Result</string>

</resources>
