<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vitalsens.vitalsensapp.fragments.RecordAnalysisFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:stretchColumns="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:textColor="@color/blue_text"
                    android:text="@string/analysis_result"
                    android:textSize="18sp"
                    android:background="@color/black_text_light"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FFFFFFFF" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/whitegrey"
                    android:textSize="12sp"
                    android:text="@string/pId"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingStart="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:background="@color/green_overlay_dark"/>
                <TextView
                    android:id="@+id/p_id"
                    android:textColor="@color/blue_text"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingEnd="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:background="@color/green_overlay_light"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FFFFFFFF" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/whitegrey"
                    android:textSize="12sp"
                    android:text="@string/dType"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingStart="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:background="@color/green_overlay_dark"/>
                <TextView
                    android:id="@+id/d_type"
                    android:textColor="@color/blue_text"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingEnd="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:background="@color/green_overlay_light"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FFFFFFFF" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/whitegrey"
                    android:textSize="12sp"
                    android:text="@string/rTime"
                    android:paddingTop="3dip"
                    android:paddingBottom="1dip"
                    android:paddingStart="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:background="@color/green_overlay_dark"/>
                <TextView
                    android:id="@+id/r_time"
                    android:textColor="@color/blue_text"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingEnd="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:background="@color/green_overlay_light"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FFFFFFFF" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/whitegrey"
                    android:textSize="12sp"
                    android:text="@string/duration"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingStart="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:background="@color/green_overlay_dark"/>
                <TextView
                    android:id="@+id/duration"
                    android:textColor="@color/blue_text"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingEnd="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:background="@color/green_overlay_light"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FFFFFFFF" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/whitegrey"
                    android:textSize="12sp"
                    android:text="@string/hRate"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingStart="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:background="@color/green_overlay_dark"/>
                <TextView
                    android:id="@+id/heart_rate"
                    android:textColor="@color/blue_text"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingEnd="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:background="@color/green_overlay_light"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FFFFFFFF" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/whitegrey"
                    android:textSize="12sp"
                    android:text="@string/pvcCount"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingStart="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:background="@color/green_overlay_dark"/>
                <TextView
                    android:id="@+id/pvc_count"
                    android:textColor="@color/blue_text"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:paddingTop="1dip"
                    android:paddingBottom="1dip"
                    android:paddingEnd="5dip"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:background="@color/green_overlay_light"/>
            </TableRow>
        </TableLayout>


    </ScrollView>

</LinearLayout>